# quasar-online-ide

./: .gitignore  Dockerfile  README.md  docker-compose.yml  startup-script.sh
online-ide/: .gitignore  README.md  package-lock.json  package.json  quasar.config.js
online-ide/src/components/: IframeEmbed.vue  InlineCode.vue
online-ide/src/layouts/: MainLayout.vue
online-ide/src/pages/: ExercisePage.vue  IndexPage.vue
online-ide/src/router/: routes.js
playground/: main.py  pyproject.toml
