[tool.poetry]
name = "playground"
version = "0.1.0"
description = "Your place to learn everything about data science, analytics and software engineering in pyhton!"
authors = ["Jan W. <wennmann@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.3"
ipython = "^8.21.0"
ipykernel = "^6.29.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
